# football-apis

./: .envrc  .gitignore  README.md  TODO.txt  agent.py  apikeys.json  apikeys.txt  categories.md  client.py  example_structured_odds.json  prompts.py  pyproject.toml  requirements.txt  scrape.py  setup.py  simplified_market_types_test_output.json  site_urls.py  test_agent_diff.py  test_api_key_manager.py  test_betting_client.py  test_market_extraction_only.py  test_market_types_simple.py  test_simplified_market_types.py  test_structured_odds.py
.cursor/rules/: code.mdc  extraction.mdc  no-hardcoded-selectors.mdc
cache/: betting_odds_params.pkl  football-data_params.pkl  footballdataclient_cache.pkl  the-odds-api_params.pkl
cache/footystats/: competitions.json  competitions_italy.json  teams_serie-a.json
cache/oddsportal/: competitions.json  teams_serie-a.json
cache/worldfootball/: competitions.json  competitions_italy__continents_uefa.json  teams_ita-serie-a.json
data/20250617/: betting_odds_20250617_153627.json  betting_odds_20250617_162846.json
football_apis/: __init__.py  base_client.py  run.py
football_apis/clients/: __init__.py  betting_odds.py  clubelo_api.py  football_data_api.py  match_history.py  performance_stats.py  team_ratings.py  the_odds_api.py
football_apis/mixins/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  test_api_fix.py  test_betting_odds.py  test_clubelo.py  test_football_data.py  test_llm_selector_fix.py  test_match_history.py  test_performance_stats.py  test_selector_validation.py  test_team_ratings.py  test_the_odds_api.py
(+3 files in other folders)
